--- a/cephaland.cabal
+++ b/cephaland.cabal
@@ -24,37 +24,56 @@ library
                      , Ceph.Scene.Camera
                      , Ceph.Scene.HUD
 
+                     , Ceph.Jams
                      , Ceph.Components
                      , Ceph.Util
                      , Ceph.Handler
-  build-depends:       apecs
+  build-depends:       apecs >= 0.5.0.0
                      , base
-                     , gloss
+                     , bytestring
+                     , directory
+                     , Euterpea >= 2.0.4
+               
+                     , gloss >= 1.12.0.0
                      , gloss-juicy >= 0.2.2
                      , linear
+                     , HCodecs
+                     , hamilton >= 0.1.0.2
+                     , hmatrix >=0.18
+                     , hmatrix-vector-sized >=0.1.0.0
                      , optparse-applicative >= 0.13.2.0
                      , random
-                     , SDL >= 0.6.6.0
                      , streamly >= 0.4.1
+                     , vector
+                     , vector-sized >= 1.0
                      --, sdl2
-                     --, sdl2-mixer >= 1.1.0
+                     , sdl2-mixer >= 1.1.0
   
                        
 executable cephaland
   hs-source-dirs:      src
   main-is:             Game.hs
   ghc-options:         -O2
-  build-depends:       apecs
+  build-depends:       apecs >= 0.5.0.0
                      , base
+                     , bytestring
+                     , directory
+                     , Euterpea >= 2.0.4
                      , gloss
                      , gloss-juicy >= 0.2.2
+                     , HCodecs
+                     , hamilton >= 0.1.0.2
+                     , hmatrix >=0.18
+                     , hmatrix-vector-sized >=0.1.0.0
                      , linear
                      , optparse-applicative >= 0.13.2.0
                      , random
-                     , SDL >= 0.6.6.0
+                     
                      , streamly >= 0.4.1
+                     , vector
+                     , vector-sized >= 1.0
                      --, sdl2
-                     --, sdl2-mixer >= 1.1.0
+                     , sdl2-mixer >= 1.1.0
                 
   default-language:    Haskell2010
 
