--- a/stack.yaml
+++ b/stack.yaml
@@ -1,24 +1,27 @@
-resolver: lts-12.5 
-# resolver: 9.14 # for sdl2
+#resolver: lts-12.10
+resolver: lts-9.14 # for sdl2
 require-stack-version: ">= 1.7.1"
 packages:
   - .
 extra-deps:
   - apecs-0.5.0.0
-  - gloss-juicy-0.2.2
-  - gloss-1.12.0.0
-  - gloss-rendering-1.12.0.0
-  - streamly-0.4.1
+  - gloss-juicy-0.2.3
+  - gloss-1.13.0.1
+  - gloss-rendering-1.13.0.2
+#  - hosc-0.16
+#  - tidal-0.9.10
+#  - streamly-0.4.1
   - Euterpea-2.0.5
   - PortMidi-0.1.6.1
   - arrows-0.4.4.2
   - Stream-0.4.7.2
   - lazysmallcheck-0.6
-
+  - HCodecs-0.5.1
 #  - hamilton-0.1.0.3
 #  - hmatrix-vector-sized-0.1.1.0
 #  - lockfree-queue-0.2.3.1
-#  - sdl2-mixer-1.1.0
+  - 'sdl2-mixer-1.1.0'
+  - 'sdl2-ttf-2.0.2'
 #  - vector-sized-1.0.4.0
 #  - indexed-list-literals-0.2.1.1
 
