--- a/ceph.cabal
+++ b/ceph.cabal
@@ -51,7 +51,8 @@ library
                , HCodecs
                , StateVar
                , aeson
-               , apecs >=0.7.0
+               , apecs >= 0.7.1
+               --, apecs-stm >= 0.1.1
                , base >=4.7 && <5
                , bytestring
                , containers
