--- a/ceph.cabal
+++ b/ceph.cabal
@@ -7,8 +7,8 @@
 
 name:           ceph
 version:        0.0.1
-synopsis:       platformer game with music
-description:    platformer game with music
+synopsis:       platformer game 
+description:    platformer game 
 category:       Game
 homepage:       https://github.com/grousebert/cephaland#readme
 bug-reports:    https://github.com/grousebert/cephaland/issues
@@ -57,6 +57,7 @@ library
                , bytestring
                , containers
                , contravariant >= 1.4
+               , first-class-families
                , directory
                , gloss
                , gloss-juicy
@@ -72,6 +73,9 @@ library
                , sdl2-image
                , sdl2-mixer
                , sdl2-ttf
+               , singletons
+               , template-haskell
+               
                , text
                , text-conversions
                , time
@@ -108,6 +112,7 @@ executable ceph
               , bytestring
               , containers
               , directory
+              , first-class-families
               , gloss
               , gloss-juicy
               , groups
@@ -122,6 +127,8 @@ executable ceph
               , sdl2-image
               , sdl2-mixer
               , sdl2-ttf
+              , singletons
+              , template-haskell
               , text
               , text-conversions
               , time
