--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,7 @@ packages:
 extra-deps:
   - apecs-0.7.1
 #  - apecs-stm-0.1.1
+  - first-class-families-0.5.0.0
   - gloss-juicy-0.2.3
   - gloss-1.13.0.1
   - gloss-rendering-1.13.0.2
