--- a/stack.yaml
+++ b/stack.yaml
@@ -1,10 +1,12 @@
-#resolver: lts-12.10
+#resolver: lts-13.12
 resolver: lts-9.14 # for sdl2
 require-stack-version: ">= 1.7.1"
 packages:
   - .
 extra-deps:
   - apecs-0.7.1
+#  - csound-expression-5.3.2
+#  - csound-expression-typed-0.2.2.0
 #  - apecs-stm-0.1.1
   - first-class-families-0.5.0.0
   - gloss-juicy-0.2.3
@@ -22,8 +24,8 @@ extra-deps:
 #  - hamilton-0.1.0.3
 #  - hmatrix-vector-sized-0.1.1.0
 #  - lockfree-queue-0.2.3.1
-  - 'sdl2-mixer-1.1.0'
-  - 'sdl2-ttf-2.0.2'
+  -  sdl2-mixer-1.1.0
+  -  sdl2-ttf-2.0.2
 #  - vector-sized-1.0.4.0
 #  - indexed-list-literals-0.2.1.1
 
