--- a/ceph.cabal
+++ b/ceph.cabal
@@ -33,6 +33,7 @@ library
         Ceph.Component.Projectile
         Ceph.Component.Weapon
         Ceph.Component.Wall
+        Ceph.Component.Player
         Ceph.Components
         Ceph.Handler
         Ceph.Jams
@@ -41,6 +42,7 @@ library
         Ceph.Scene
         Ceph.Scene.Camera
         Ceph.Scene.HUD
+        Ceph.Scene.Board
         Ceph.Util
         Main
   other-modules:
@@ -52,10 +54,11 @@ library
   build-depends: Euterpea >=2.0.5
                , HCodecs
                , StateVar
+               --, acts
                , adjunctions
                , aeson
                , apecs >= 0.7.1
-               , astar-monad
+               --, astar-monad
                --, apecs-stm >= 0.1.1
                , base >=4.7 && <5
                , bytestring
@@ -75,15 +78,17 @@ library
                , safe
                , safe-exceptions
                , sdl2
-               , sdl2-image
+               --, sdl2-gfx
+               --, sdl2-image
                , sdl2-mixer
                , sdl2-ttf
                --, singletons
                , template-haskell
-               , text
-               , text-conversions
+               --, text
+               --, text-conversions
                , time
                , vector
+               
   default-language: Haskell2010
 
 executable ceph
@@ -114,13 +119,14 @@ executable ceph
                 Euterpea >=2.0.5
               , HCodecs
               , StateVar
+              --, acts
               , adjunctions
-              
               , aeson
               , apecs >= 0.7.0
-              , astar-monad
+              --, astar-monad
               , base >= 4.7 && <5
               , bytestring
+              , ceph
               , containers
               , directory
               , distributive
@@ -136,13 +142,14 @@ executable ceph
               , safe
               , safe-exceptions
               , sdl2 >= 2.4.1.0
-              , sdl2-image
+              --, sdl2-gfx
+              --, sdl2-image
               , sdl2-mixer
               , sdl2-ttf
               --, singletons
               , template-haskell
-              , text
-              , text-conversions
+              --, text
+              --, text-conversions
               , time
               , vector
   default-language: Haskell2010
